--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-vercel": "next",
-    "@sveltejs/kit": "next",
-    "@vitejs/plugin-basic-ssl": "^0.1.1",
+    "@sveltejs/kit": "1.0.0",
+    "@vitejs/plugin-basic-ssl": "1.0.1",
     "dotenv-cli": "^5.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -35,7 +35,7 @@
     "svelte": "^3.46.4",
     "svelte2tsx": "^0.5.6",
     "typescript": "^4.6.2",
-    "vite": "^3.0.0"
+    "vite": "4.0.1"
   },
   "type": "module"
 }
